--- a/.github/workflows/butane2ignition.yml
+++ b/.github/workflows/butane2ignition.yml
@@ -13,6 +13,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+        with:
+          token: ${{ secrets.PUSH2REP }}
       
       - name: Convert Butane to Ignition
         run: |
