--- a/.github/workflows/butane2ignition.yml
+++ b/.github/workflows/butane2ignition.yml
@@ -4,9 +4,11 @@ on:
   push:
     paths:
       - 'ucore-autorebase.butane'
+      - '.github/workflows/**'
   pull_request:
     paths:
       - 'ucore-autorebase.butane'
+      - '.github/workflows/**'
 
 jobs:
   convert:
