only compile when pushed on main

--- a/.github/workflows/push-bu2ign.yml
+++ b/.github/workflows/push-bu2ign.yml
@@ -20,6 +20,7 @@ jobs:
           --pretty --strict < ucore-autorebase.bu > ucore-autorebase.ign
           
       - name: Commit changes
+        if: github.ref == 'refs/heads/main'
         run: |
           git config --global user.name 'GitHub Actions'
           git config --global user.email 'actions@github.com'
